--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<title>My  current favourite song is Babam Bam Paradox | Babam bam bam lahari | paradox babam bam full song | bagad bam bam bam lahari</title>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
