--- a/main.html
+++ b/main.html
@@ -3,16 +3,16 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-	<div>
-		<title>My  current favourite song is Babam Bam Paradox | Babam bam bam lahari | paradox babam bam full song | bagad bam bam bam lahari</title>
-	</div>
+    <!-- the entire body must be written by student -->
+    <div>
+        <a href="https://youtu.be/OJ2lyGhNArI?si=fTr_3-O-IBp8w3fV">My current favourite song is Babam Bam Paradox | Babam bam bam lahari | paradox babam bam full song | bagad bam bam bam lahari</a>
+            </div>
     <script type="text/javascript" src="./script.js">
-</script>
+    </script>
 
 </body>
 
